--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -31,3 +31,41 @@ body {
     text-wrap: balance;
   }
 }
+
+.custom-checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 1.25rem; 
+  height: 1.25rem;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 0.175rem;
+  transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.custom-checkbox:checked {
+  background-color: #0284c7;
+  border-color: #0284c7;
+}
+
+.custom-checkbox:checked::before {
+  content: '✓';
+  color: white;
+  font-size: 0.875rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-right: 0.10rem;
+  line-height: 1.25rem;
+}
